// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyses component Mount component 1`] = `
.c0 {
  cursor: auto;
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c3 {
  cursor: auto;
  margin-left: auto;
}

.c10 {
  cursor: auto;
  padding-top: 48px;
  padding-right: 14px;
}

.c2 {
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  cursor: pointer;
}

.c6 {
  cursor: inherit;
}

.c9 {
  cursor: pointer;
  margin-left: -17px;
  padding-left: 17px;
  margin-right: -17px;
}

.c12 {
  cursor: inherit;
  font-size: 40px;
  margin: 0;
  font-weight: 700;
}

.c7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: inherit;
  margin-left: .7em;
}

.c11 {
  cursor: auto;
}

.c4 {
  position: relative;
  display: inline-block;
}

.c4:hover > div {
  display: block;
}

.c8 {
  overflow: visible;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,.14),0px 1px 18px 0px rgba(0,0,0,.12);
  position: absolute;
  background-color: #fff;
  color: #000;
  width: 80px;
  min-width: 80pxpx;
  padding: 12px 16px;
  z-index: 47;
  text-align: left;
  cursor: pointer;
  opacity: 0;
  pointer-events: none;
  left: 85px;
}

.c8 > *:hover:not(.c13) {
  background-color: rgba(0,0,0,0.05);
}

.c8 svg {
  margin-right: 1em;
}

.c8 > svg ~ span {
  margin-right: 1em;
}

.c1 {
  cursor: auto;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 204px;
  padding-right: 14px;
  width: 100%;
  height: 48px;
  background-color: #fff;
  position: absolute;
  top: 48px;
  left: 0;
  position: fixed;
  z-index: 50;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c11 {
    display: none;
  }
}

<div
  className="c0"
  cursor="auto"
>
  <div
    className="c1"
    cursor="auto"
    height={48}
    width={1}
  >
    <div
      className="c2"
      cursor="inherit"
    >
      <div
        className="c3"
        cursor="auto"
      />
      <div
        className="c4"
        data-tag="dropdown"
      >
        <span
          className="c5"
          cursor="pointer"
          onClick={[Function]}
        >
          <span
            className="c6"
            cursor="inherit"
          >
             
            Jobs per page 25
          </span>
          <svg
            className="c7"
            clipRule="evenodd"
            cursor="inherit"
            fill="currentcolor"
            fillRule="evenodd"
            height=".7em"
            ml=".7em"
            viewBox="0 0 24 12"
            width=".7em"
          >
            <path
              d="M0 0l11.959 12 12-12H0z"
            />
          </svg>
        </span>
        <div
          className="c8"
          color="black"
          cursor="pointer"
          disabled={false}
          onClick={[Function]}
          overflow="visible"
          width="80px"
        >
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            10
          </div>
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            25
          </div>
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            50
          </div>
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            100
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c10"
    cursor="auto"
  >
    <div
      className="c11"
      cursor="auto"
    />
    <h1
      className="c12"
      cursor="inherit"
      fontSize={6}
    >
      No jobs have been run on this account.
    </h1>
  </div>
</div>
`;

exports[`Analyses component Mount component with non-empty page 1`] = `
.c0 {
  cursor: auto;
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c3 {
  cursor: auto;
  margin-left: auto;
}

.c10 {
  cursor: auto;
  padding-top: 48px;
  padding-right: 14px;
}

.c13 {
  cursor: auto;
  width: 70%;
  max-width: 1024px;
}

.c2 {
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  cursor: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  cursor: pointer;
}

.c6 {
  cursor: inherit;
}

.c9 {
  cursor: pointer;
  margin-left: -17px;
  padding-left: 17px;
  margin-right: -17px;
}

.c7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: inherit;
  margin-left: .7em;
}

.c21 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: inherit;
  margin-right: 8px;
  color: #c00;
}

.c22 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: inherit;
  margin-right: 8px;
  color: #00C05A;
}

.c11 {
  cursor: auto;
}

.c4 {
  position: relative;
  display: inline-block;
}

.c4:hover > div {
  display: block;
}

.c8 {
  overflow: visible;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,.14),0px 1px 18px 0px rgba(0,0,0,.12);
  position: absolute;
  background-color: #fff;
  color: #000;
  width: 80px;
  min-width: 80pxpx;
  padding: 12px 16px;
  z-index: 47;
  text-align: left;
  cursor: pointer;
  opacity: 0;
  pointer-events: none;
  left: 85px;
}

.c8 > *:hover:not(.c23) {
  background-color: rgba(0,0,0,0.05);
}

.c8 svg {
  margin-right: 1em;
}

.c8 > svg ~ span {
  margin-right: 1em;
}

.c1 {
  cursor: auto;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 204px;
  padding-right: 14px;
  width: 100%;
  height: 48px;
  background-color: #fff;
  position: absolute;
  top: 48px;
  left: 0;
  position: fixed;
  z-index: 50;
}

.c14 {
  background-color: #fff;
  border: 0px;
  border-spacing: 0;
  table-layout: fixed;
  width: 100%;
  min-width: 15em;
}

.c20 {
  border: 0px;
  border-spacing: 0;
}

.c16 {
  cursor: auto;
}

.c16 > .c19 {
  border-spacing: 0;
  border-top: 1px solid rgba(34,36,38,.1);
  padding-top: 8px;
  padding-bottom: 8px;
}

.c18 {
  cursor: pointer;
}

.c18 > .c19 {
  border-spacing: 0;
  border-top: 1px solid rgba(34,36,38,.1);
  padding-top: 8px;
  padding-bottom: 8px;
}

.c15 {
  background-color: #fff;
  padding-top: 11px;
  padding-bottom: 11px;
}

.c17 {
  border-spacing: 0;
  border: 0px;
  text-align: left;
  background-color: #fff;
  top: 96px;
  z-index: 10;
  position: -webkit-sticky;
  position: sticky;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c11 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c11 {
    display: none;
  }
}

<div
  className="c0"
  cursor="auto"
>
  <div
    className="c1"
    cursor="auto"
    height={48}
    width={1}
  >
    <div
      className="c2"
      cursor="inherit"
    >
      <div
        className="c3"
        cursor="auto"
      />
      <div
        className="c4"
        data-tag="dropdown"
      >
        <span
          className="c5"
          cursor="pointer"
          onClick={[Function]}
        >
          <span
            className="c6"
            cursor="inherit"
          >
             
            Jobs per page 25
          </span>
          <svg
            className="c7"
            clipRule="evenodd"
            cursor="inherit"
            fill="currentcolor"
            fillRule="evenodd"
            height=".7em"
            ml=".7em"
            viewBox="0 0 24 12"
            width=".7em"
          >
            <path
              d="M0 0l11.959 12 12-12H0z"
            />
          </svg>
        </span>
        <div
          className="c8"
          color="black"
          cursor="pointer"
          disabled={false}
          onClick={[Function]}
          overflow="visible"
          width="80px"
        >
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            10
          </div>
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            25
          </div>
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            50
          </div>
          <div
            className="c9"
            cursor="pointer"
            onClick={[Function]}
          >
            100
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c10"
    cursor="auto"
  >
    <div
      className="c11"
      cursor="auto"
    />
    <div
      className="c12"
      cursor="inherit"
    >
      <div
        className="c13"
        cursor="auto"
        width={0.7}
      >
        <table
          className="c14"
          width="100%"
        >
          <thead
            className="c15"
          >
            <tr
              className="c16"
              cursor="auto"
            >
              <th
                className="c17"
              >
                State
              </th>
              <th
                className="c17"
              >
                Application
              </th>
              <th
                className="c17"
              >
                Started at
              </th>
              <th
                className="c17"
              >
                Last update
              </th>
            </tr>
          </thead>
          <tbody
            className=""
          >
            <tr
              className="c18"
              cursor="pointer"
            >
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                <svg
                  className="c21"
                  clipRule="evenodd"
                  cursor="inherit"
                  fill="currentcolor"
                  fillRule="evenodd"
                  height={24}
                  mr="8px"
                  state="FAILURE"
                  viewBox="0 0 25 24"
                  width={24}
                >
                  <path
                    d="M24.002 2.001L22 .001 12 9.6l-10-9.6-2 2 9.6 10L.001 22l2 2 10-9.6 10 9.6 2-2-9.6-10 9.6-9.999z"
                    fillRule="nonzero"
                  />
                </svg>
                 
                Failure
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                
                 v
                
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                28/08/2018
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                30/08/2018
              </td>
            </tr>
            <tr
              className="c18"
              cursor="pointer"
            >
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                <svg
                  className="c21"
                  clipRule="evenodd"
                  cursor="inherit"
                  fill="currentcolor"
                  fillRule="evenodd"
                  height={24}
                  mr="8px"
                  state="FAILURE"
                  viewBox="0 0 25 24"
                  width={24}
                >
                  <path
                    d="M24.002 2.001L22 .001 12 9.6l-10-9.6-2 2 9.6 10L.001 22l2 2 10-9.6 10 9.6 2-2-9.6-10 9.6-9.999z"
                    fillRule="nonzero"
                  />
                </svg>
                 
                Failure
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                
                 v
                
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                29/08/2018
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                30/08/2018
              </td>
            </tr>
            <tr
              className="c18"
              cursor="pointer"
            >
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                <svg
                  className="c21"
                  clipRule="evenodd"
                  cursor="inherit"
                  fill="currentcolor"
                  fillRule="evenodd"
                  height={24}
                  mr="8px"
                  state="FAILURE"
                  viewBox="0 0 25 24"
                  width={24}
                >
                  <path
                    d="M24.002 2.001L22 .001 12 9.6l-10-9.6-2 2 9.6 10L.001 22l2 2 10-9.6 10 9.6 2-2-9.6-10 9.6-9.999z"
                    fillRule="nonzero"
                  />
                </svg>
                 
                Failure
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                
                 v
                
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                30/08/2018
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                30/08/2018
              </td>
            </tr>
            <tr
              className="c18"
              cursor="pointer"
            >
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                <svg
                  className="c22"
                  clipRule="evenodd"
                  cursor="inherit"
                  fill="currentcolor"
                  fillRule="evenodd"
                  height={24}
                  mr="8px"
                  state="SUCCESS"
                  viewBox="0 0 25 19"
                  width={24}
                >
                  <path
                    d="M8 15L2 8.981l-2 2.02L8 19 24.001 2l-2.002-2L8 15z"
                    fillRule="nonzero"
                  />
                </svg>
                 
                Success
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                
                 v
                
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                03/09/2018
              </td>
              <td
                className="c19 c20"
                onClick={[Function]}
              >
                03/09/2018
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
